Prevent elements from overflowing rounded boarders.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -198,6 +198,10 @@ rect+use+text {
 
 #historyTable {
   margin-top: 2em;
+  border-collapse: collapse;
+  overflow: hidden;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 .pagination {
@@ -511,6 +515,10 @@ summary {
   border-bottom-right-radius: 8px;
 }
 
+button.download:first-of-type {
+  border-bottom-left-radius: 8px;
+}
+
 .primaryFilter .treeFilter {
   margin-left: 1em;
   padding-right: 3em;
@@ -575,7 +583,8 @@ summary {
 }
 
 .age_2years {
-  background-color: rgba(215, 48, 39, 0.75)
+  background-color: rgba(215, 48, 39, 0.75);
+  border-bottom-left-radius: 4px;
 }
 
 .age_1year {
